--- a/website-ecommerce/src/app/globals.css
+++ b/website-ecommerce/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: ##FFFFFF;
+  --background: #ffffff;
   --foreground: #171717;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: ##FFFFFF;
+    --background: #ffffff;
     --foreground: #0a0a0a;
   }
 }
